Add firebase phone sign in
